# FInops_platform

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  requirements-dev.txt  requirements.txt
docs/: GETTING_STARTED.md
docs/adr/: 000-template.md  001-gitops-deployment-model.md
docs/architecture/: ARCHITECTURE.md
portal/cli/: README.md  pyproject.toml
portal/cli/finops/: __init__.py  cli.py
portal/cli/finops/commands/: __init__.py  create.py  deploy.py  dev.py  doctor.py  services.py
